Definition nochmal verschoben.
git-svn-id: https://svn.lug-jena.de/uni-skripte@2768 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-krypt/skript.ltx
+++ b/vogel-krypt/skript.ltx
@@ -3780,52 +3780,8 @@ Im Jahr 1976 stellten \textsc{Diffie} und \textsc{Hellman} in ihrer
 Arbeit "`New directions in cryptography"'\cite{diffihellman} ein
 Verfahren für dieses augenscheinlich unlösbare Problem vor.
 
-\subsection{Das Protokoll von Diffie und Hellman}
-
-\begin{table}
-  \centering
-  \begin{tabularx}{.85\linewidth}{*{2}{|c|>{\raggedright\arraybackslash}X}|}
-    \hline
-    Schritt& \multicolumn{1}{c|}{Alice}& Kanal& \multicolumn{1}{c|}{Bob}\\
-    \hline
-    1.& \multicolumn{3}{c|}{\rule{0mm}{6mm}\parbox{.6\linewidth}{\centering Beide einigen sich
-       auf eine große Primzahl~$p$ und eine primitive Wurzel~$g$; $g$ und $p$
-       sind öffentlich}}\\[2mm]
-    2.& Wählt zufällig eine große Zahl~$a$, berechnet
-       $\alpha=g^{a}\pmod{p}$; $a$ ist privat && Wählt zufällig
-       eine große Zahl~$b$,  berechnet $\beta=g^{b}\pmod{p}$; $b$ ist privat\\
-    3.& & $\xleftarrow{\beta} \xrightarrow{\alpha}$ &\\
-    4.& $K=\beta^{a}\pmod{p}$& & $K=\alpha^{b}\pmod{p}$\\
-    \hline
-  \end{tabularx}
-  \caption{Austausch eines geheimen Schlüssels in der Öffentlichkeit nach
-    Diffie und Hellman}
-  \label{tab:difhel-schl-tau}
-\end{table}
-
-Alice und Bob verabreden eine große Primzahl~$p$ und eine primitive
-Wurzel~$g$, die beide öffentlich bekannt sein können. Danach wählt jeder für
-sich eine zufällige, große Zahl~$a$ bzw. $b$. Alice berechnet daraus
-$\alpha=g^{a}\pmod{p}$ und Bob berechnet $\beta=g^{b}\pmod{p}$. Diese beiden
-Ergebnisse tauschen dann beide wieder aus, wobei die Zahlen öffentlich
-zugänglich seien können. Jeder berechnet dann für sich das gemeinsame
-Geheimnis~$k$. Wie \autoref{tab:difhel-schl-tau} zeigt, berechnet
-Alice $k_{A}=\beta^{a}\pmod{p}$ und Bob $k_{B}=\alpha^{b}\pmod{p}$.
-\begin{gather*}
-  k_{A} \equiv \beta^{a} \equiv (g^{b})^{a}\equiv
-     (g^{a})^{b} = \alpha^{b} = k_{B}\pmod{p}
-\end{gather*}
-
-Aus den öffentlichen Größen $\alpha,\beta,p$ und $g$ kann man nicht das
-Geheimnis $k$ ermitteln, weil man dafür eine der beiden geheimen Zahlen~$a$
-oder $b$ benötigt, um $\alpha^{b}$ bzw. $\beta^{a}$ berechnen zu können.
-Könnte man eine der Zahlen~$a$ oder $b$ ermitteln, so wäre dies ein Weg, den
-diskreten Logarithmus $a=\log_{g}\alpha\pmod{p}$ bzw.
-$b=\log_{g}\beta\pmod{p}$ zu berechnen, was nach \autoref{sec:diskrlog} (in
-Polynomialzeit) nicht möglich ist.
-
 \begin{defini}
-  \label{def:1}\todo{Die Definition muss eher kommen.}
+  \label{def:1}
   Eine Zahl~$a$ ($1\leq a< n$) heißt genau dann
   \highl[Wurzel!primitive]{primitive Wurzel} von $n$, wenn
   $a$ die folgenden Eigenschaften erfüllt
@@ -3901,6 +3857,52 @@ Polynomialzeit) nicht möglich ist.
   Dabei ist der Wert $\log_{a}x$ eindeutig als diejenige Zahl~$m$ bestimmt, für
   die $a^{m} \pmod{n} = y$ gilt.
 \end{lemma}
+
+
+\subsection{Das Protokoll von Diffie und Hellman}
+
+\begin{table}
+  \centering
+  \begin{tabularx}{.85\linewidth}{*{2}{|c|>{\raggedright\arraybackslash}X}|}
+    \hline
+    Schritt& \multicolumn{1}{c|}{Alice}& Kanal& \multicolumn{1}{c|}{Bob}\\
+    \hline
+    1.& \multicolumn{3}{c|}{\rule{0mm}{6mm}\parbox{.6\linewidth}{\centering Beide einigen sich
+       auf eine große Primzahl~$p$ und eine primitive Wurzel~$g$; $g$ und $p$
+       sind öffentlich}}\\[2mm]
+    2.& Wählt zufällig eine große Zahl~$a$, berechnet
+       $\alpha=g^{a}\pmod{p}$; $a$ ist privat && Wählt zufällig
+       eine große Zahl~$b$,  berechnet $\beta=g^{b}\pmod{p}$; $b$ ist privat\\
+    3.& & $\xleftarrow{\beta} \xrightarrow{\alpha}$ &\\
+    4.& $K=\beta^{a}\pmod{p}$& & $K=\alpha^{b}\pmod{p}$\\
+    \hline
+  \end{tabularx}
+  \caption{Austausch eines geheimen Schlüssels in der Öffentlichkeit nach
+    Diffie und Hellman}
+  \label{tab:difhel-schl-tau}
+\end{table}
+
+Alice und Bob verabreden eine große Primzahl~$p$ und eine primitive
+Wurzel~$g$, die beide öffentlich bekannt sein können. Danach wählt jeder für
+sich eine zufällige, große Zahl~$a$ bzw. $b$. Alice berechnet daraus
+$\alpha=g^{a}\pmod{p}$ und Bob berechnet $\beta=g^{b}\pmod{p}$. Diese beiden
+Ergebnisse tauschen dann beide wieder aus, wobei die Zahlen öffentlich
+zugänglich seien können. Jeder berechnet dann für sich das gemeinsame
+Geheimnis~$k$. Wie \autoref{tab:difhel-schl-tau} zeigt, berechnet
+Alice $k_{A}=\beta^{a}\pmod{p}$ und Bob $k_{B}=\alpha^{b}\pmod{p}$.
+\begin{gather*}
+  k_{A} \equiv \beta^{a} \equiv (g^{b})^{a}\equiv
+     (g^{a})^{b} = \alpha^{b} = k_{B}\pmod{p}
+\end{gather*}
+
+Aus den öffentlichen Größen $\alpha,\beta,p$ und $g$ kann man nicht das
+Geheimnis $k$ ermitteln, weil man dafür eine der beiden geheimen Zahlen~$a$
+oder $b$ benötigt, um $\alpha^{b}$ bzw. $\beta^{a}$ berechnen zu können.
+Könnte man eine der Zahlen~$a$ oder $b$ ermitteln, so wäre dies ein Weg, den
+diskreten Logarithmus $a=\log_{g}\alpha\pmod{p}$ bzw.
+$b=\log_{g}\beta\pmod{p}$ zu berechnen, was nach \autoref{sec:diskrlog} (in
+Polynomialzeit) nicht möglich ist.
+
 
 \subsection{Das Protokoll von Rivest und Sherman}
 
