Definition zur primitiven Wurzel etwas ausgedünnt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2769 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-krypt/skript.ltx
+++ b/vogel-krypt/skript.ltx
@@ -3782,16 +3782,17 @@ Verfahren für dieses augenscheinlich unlösbare Problem vor.
 
 \begin{defini}
   \label{def:1}
-  Eine Zahl~$a$ ($1\leq a< n$) heißt genau dann
+  Eine Zahl~$a$ mit $1\leq a< n$ heißt genau dann
   \highl[Wurzel!primitive]{primitive Wurzel} von $n$, wenn
   $a$ die folgenden Eigenschaften erfüllt
   \begin{itemize}
-   \item $a$ und $n$ sind Teilerfremd ($\ggT(a,n)=1$) und
+   \item $a$ und $n$ sind teilerfremd ($\ggT(a,n)=1$) und
    \item der kleinste Exponent~$d$, der $a^{d}\equiv1\pmod{n}$ erfüllt, ist
-    $\phi(n)$ --~$d$ heißt \highl{Ordnung} von $a$~-- oder anders formuliert:
-    für alle $d<\phi(n)$ gilt $a^{d}\not\equiv 1\pmod{n}$
+    $\phi(n)$.
   \end{itemize}
 \end{defini}
+
+Man bezeichnet $d$ als \highl{Ordnung} von $a$.
 
 \begin{bsp}
   Für $n=5$ kommen als primitive Wurzeln die Zahlen $\Z_{5}^{*} = \{1,2,3,4\}$
