--- a/vogel-krypt/skript.ltx
+++ b/vogel-krypt/skript.ltx
@@ -1715,7 +1715,7 @@ genau dann, wenn die Determinante~$\det A$ ein inverses Element in
 $[R,+,\cdot]$ besitzt, also genau dann, wenn
 $\det A$ eine Einheit des Rings $[R,+,\cdot]$ ist.
 
-Dabei gilt: $A^{-1}= (\det A)^{-1} B$, wobei $(b_{ij})=(-1)^{i+j}\cdot
+Dabei gilt: $A^{-1}= \frac{B}{\det A}$, wobei $(b_{ij})=(-1)^{i+j}\cdot
 \det A_{ji}$.
 
 \section{Affine Blockchiffren}
