Horst Feistel entlinkt, andere Personen haben ebenfalls keinen Link
git-svn-id: https://svn.lug-jena.de/uni-skripte@2774 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-krypt/skript.ltx
+++ b/vogel-krypt/skript.ltx
@@ -1934,7 +1934,7 @@ entwickelt und ist heute Grundlage für viele symmetrische Blockchiffren unter
 anderem dem heute am häufigsten eingesetzten Verschlüsselungsalgorithmus DES
 --~dazu später mehr in \autoref{sec:des}. Als Erfinder der Feistel"=Chiffre
 gilt
-\href{http://de.wikipedia.org/wiki/Horst_Feistel}{\textsc{Horst Feistel}}, ein
+\textsc{Horst Feistel}, ein
 Mitarbeiter des Projekts.
 
 Bei der Feistel"=Chiffre werden die Klartextblöcke durch eine alternierende Folge von
