--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -705,7 +705,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
   \begin{enumerate}
    \item Sei $n\in N$. Dann ist $\abs{\Sym(n)}=n!$.
    \item Sei $\KK$ ein Körper und $\abs{\KK}=q<\infty$. Dann ist $\abs{\GL(n,\KK)}=
-    (q^{n}-1)(q^{n}-q)\cdot\dots\cdot (q^{n}-q^{n-1})$.
+    (q^{n}-1)(q^{n}-q)\cdot\dotsc\cdot (q^{n}-q^{n-1})$.
   \end{enumerate}
   \begin{proof}
     \begin{enumerate}
@@ -841,7 +841,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 
 \begin{satz}
   Sei $G$ eine Gruppe und $X\subseteq G$. Dann besteht $\langle X\rangle$ aus
-  den Elementen der Form $x_{1}^{\epsilon_{1}}\cdot\dotsb\cdot x_{n}^{\epsilon_{n}}$ mit
+  den Elementen der Form $x_{1}^{\epsilon_{1}}\cdot\dotsc\cdot x_{n}^{\epsilon_{n}}$ mit
   $n\in\N_{0}, x_{1},\dotsc, x_{n}\in X,
   \epsilon_{1},\dotsc,\epsilon_{n}\in\{\pm 1\}$. Im Fall $n=0$ interpretiert
   man das Produkt als $1$.
