Definitionen zu Set-Typen des NDBM eingebaut
git-svn-id: https://svn.lug-jena.de/uni-skripte@2802 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -1072,8 +1072,30 @@ und so genannten Ausprägungen (vom englischen Wort
   Occurrence}\index{Occurrence!Set} und \highl{Record
   Occurrence}\index{Occurences!Record} zusammen
 
-\section{Settyp}
+\section{Set-Typ}
 
+\begin{defini}[Set-Typ]\label{def:settyp}
+  Ein \highl{Set-Typ} ist ein (zweistelliger) Beziehungstyp $S$
+  zwischen den Record"=Typen $R$ und $R'$ mit $R\neq R'$.
+\end{defini}
+
+\begin{defini}[Owner-, Member-Typ]
+  In der \ref{def:settyp} wird $R$ als \highl{Owner-Typ} und $R'$ als
+  \highl{Member-Typ} bezeichnet.
+\end{defini}
+
+Zwischen $R$ und $R'$ herrscht ein 1:n"=Beziehungstyp. Dies wird nicht
+explizit in der grafischen Darstellung notiert.
+
+Auf der Ausprägungsebene gilt:
+\begin{itemize}
+\item Zu \emph{jedem} Record $r$ aus dem Record"=Typ $R$ gehört eine
+  Set Occurence $s$ aus $S$. Diese darf leer sein.
+\item Jeder Record $r'$ aus $R'$ gehört zu maximal einer Set Occurence
+  $s$ aus $S$. Damit ist der Owner Record zu einem Member Record
+  innerhalb eines Set immer eindeutig definiert. Waisenkinder sind
+  erlaubt.
+\end{itemize}
 \todo{Weiteres schreiben}
 
 
