CREATE DOMAIN ergänzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2810 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -1777,7 +1777,9 @@ create table Buch
 \paragraph{\lstinline{CREATE DOMAIN}}
 
 Diese Anweisung ermöglicht die Vereinbarung benutzerspezifischer
-Wertebereiche. Ein Beispiel ist die Angabe eines Fachgebiets:
+Wertebereiche. Die oben vorgestellten \texttt{default}- und
+\texttt{check}"=Klauseln dürfen mit verwendet werden. Ein Beispiel ist
+die Angabe eines Fachgebiets:
 \begin{lstlisting}
 CREATE DOMAIN Fachgebiet varchar (20)
   default 'Informatik'
