ü-->ue, listings beschwert sich.
git-svn-id: https://svn.lug-jena.de/uni-skripte@2814 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -1761,7 +1761,7 @@ CREATE TABLE Buch
    (InvNr integer primary key,
     Titel varchar(30),
     ISBN char(5),
-    Autor varchar(40) default  'Küspert')
+    Autor varchar(40) default  'Kuespert')
 \end{lstlisting}
 
 \begin{lstlisting}[caption={CREATE TABLE mit check-Wert},label=cre-tab-check]
@@ -1770,7 +1770,7 @@ create table Buch
         check (InvNr between 5 and 9999),
     Titel varchar(30),
     ISBN char(5),
-    Autor varchar(40) default  'Küspert'
+    Autor varchar(40) default  'Kuespert'
         check (Autor != 'Kujau'))
 \end{lstlisting}
 
