--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -1903,6 +1903,27 @@ DELETE FROM basisrelation
 Unter Umständen kann eine Löschung zu einer Verletzung der
 Integritätsbedingungen führen.
 
+\paragraph{\lstinline{INSERT}}
+Nun wollen wir neue Werte einfügen. Dazu dient
+\lstinline-INSERT-. Diese Anweisung kann in zwei Erscheinungsformen
+auftreten. Zum einen können einfach Tupel als Konstanten eingefügt
+werden. Andererseits können berechnete Werte aus anderen Relationen
+eingefügt werden. Die unten dargestellte Syntax ist vereinfacht:
+\begin{lstlisting}
+INSERT INTO basisrelation [(spalte1,..,spalteN)]
+  VALUES (konstante1,..,konstanteN)
+\end{lstlisting}
+So können wir ein neues Tupel in die Relation buch einfügen:
+\begin{lstlisting}
+INSERT INTO buch (InvNr, ISBN)
+  VALUES (9382, 9-882-23-1235-4)
+\end{lstlisting}
+Was passiert mit den Werten von Autor und Titel? Diese werden auf
+\lstinline-NULL- gesetzt. Werte, die bei der Anweisung 
+\lstinline-CREATE TABLE- mit \lstinline-NOT NULL- festgelegt werden,
+müssen auf jeden Fall belegt werden. Ansonsten schlägt das Einfügen
+fehl.
+
 
 \todo[inline]{Weitere Anweisungen einfügen. Die weiteren
   SQL-Anweisungen werden eventuell später nachgetragen. Details bitte vorerst
