Bemerkung zu den Begrifflichkeiten ergänz
git-svn-id: https://svn.lug-jena.de/uni-skripte@2827 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -331,6 +331,23 @@ wie ein roter Faden durch die Unterlagen.
   Bedingungen zu überwachen.
 \end{defini}
 
+\begin{bemerk}
+  Eine Datenbank kann neben den primären Daten weitere Informationen
+  enthalten. Dazu gehören:
+  \begin{itemize}
+  \item Indexe (Zugriffspfade)
+  \item Beschreibungsinformationen, d.\,h. Metadaten, wie Feldlängen,
+    -namen, Informationen über die Zugangsberechtigung etc.
+  \item Integritätsbedingungen
+  \item Aktive Elemente, d.\,h. Aktionen, die in Abhängigkeit von
+    bestimmten Ereignissen Änderungen auslösen.
+  \item Programme bzw. gespeicherte Prozeduren (vom englischen Wort:
+    stored procedures). Diese sind in der Datenbank hinterlegt und
+    laufen bei Aufruf der Datenbank ab.
+  \end{itemize}
+\end{bemerk}
+
+
 \section{Datenverwaltung mit Dateisystem}
 \label{sec:datenv-mit-date}
 
