Rollen DB-Admin, Anw-Admin etc. erklärt.
git-svn-id: https://svn.lug-jena.de/uni-skripte@2828 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -440,6 +440,15 @@ Schnittstellen aus. Details sind in dem Buch "`The ANSI/SPARC DBMS
 Model"' von \textsc{Donald Andrew Jardine} (siehe~\cite{ja76})
 erläutert.
 
+Ein \highl{Datenbankadministrator} legt zusammen mit dem
+\highl{Anwendungsadministrator} das konzeptionelle Schema sowie allein
+das interne Schema fest. Er kennt nicht unbedingt das externe
+Schema. Der \highl{Anwendungsadministrator} legt mit dem
+Datenbankadministrator das externe Schema und allein das
+konzeptionelle Schema fest. Er kennt nicht unbedingt das interne
+Schema. Der Endnutzer kennt das externe Schema, aber keine weiteren
+Schemata.
+
 \subsection{DIAM}
 \label{sec:diam}
 
