TODO-Eintraege ergänzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2836 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/TODO
+++ b/web/TODO
@@ -2,3 +2,10 @@
 
 * Im Web eine Grafik über die Seitenanzahl, die Fehler, Warnungen und
   Boxen in allen Versionen.
+
+* Überschrift in skripte.html sollte besser "Skriptname bei Profname"
+   lauten
+
+* Anstatt der SVN-Kommandozeile könnte in skripte.html jeweils eine
+   kurze Beschreibung zu dem jeweiligen Skript stehen.
+
