Option breaklinks für hyperref gesetzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2842 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-info3/skript.tex
+++ b/hecker-info3/skript.tex
@@ -10,7 +10,7 @@
 
 \usepackage{listings}
 \usepackage{babel}
-\usepackage[draft=false]{hyperref}
+\usepackage[draft=false,breaklinks]{hyperref}
 \usepackage{fancyvrb}
 \usepackage{amssymb}
 \usepackage{amsmath}
