--- a/hecker-info3/skript.tex
+++ b/hecker-info3/skript.tex
@@ -22,6 +22,13 @@
 \usepackage{float}
 \usepackage{ecltree}
 \usepackage{epic}
+\usepackage{fixmath}     % ISO-konforme griech. Buchstaben
+\usepackage{svn}         % Zum Auswerten und ordentlichen Darstellen der
+                         % SVN-Schlüsselwörter (s. vor \begin{document})
+                         % dafür muss in SVN noch das Flag svn:keywords
+                         % auf "LastChangedRevision LastChangedDate"
+                         % gesetzt werden
+
 %\usepackage{epic, eepic, ecltree}
 
 % \usepackage{ae}  %probably interesting if font-collision
