equation in gather geändert
git-svn-id: https://svn.lug-jena.de/uni-skripte@2848 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-info3/skript.tex
+++ b/hecker-info3/skript.tex
@@ -394,9 +394,9 @@ Mehr dazu gibt es in der Informatik IV, hier beschäftigen wir uns ausschließli
   \emph{polynomielle Laufzeit}, heißt effizient.
   
   Es gilt also für ein festes $k$:
-  \begin{equation*}
+  \begin{gather*}
     T_a (n)= O(n^k)     
-  \end{equation*}
+  \end{gather*}
 \end{definition}
 
 \subsection{Die Zeitanalyse an einem Beispiel}
