Skript auf UTF-8 umgestellt
Bisher fehlte die Angabe eines Encoding. Ich habe UTF-8 eingesetzt und die Datei skriptb.tex mit
    iconv -f ISO-8859-1 -t UTF-8 skriptb.tex
nach UTF-8 überführt. Anschließend mussten bei den Algorithmen einige Umlaute maskiert werden.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2865 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-info3/skript.tex
+++ b/hecker-info3/skript.tex
@@ -7,7 +7,7 @@
                    % und bieten mehr Trennstellen
 
 \documentclass[ngerman]{scrreprt}%Was bewirkt das [draft,12pt] 
-
+\usepackage[utf8]{inputenc}
 \usepackage{listings}
 \usepackage{babel}
 \usepackage[draft=false,breaklinks]{hyperref}
