--- a/hecker-info3/skriptb.tex
+++ b/hecker-info3/skriptb.tex
@@ -396,6 +396,7 @@ Beispiel (getauscht werden die \textbf{Fetten}):
 \begin{figure}[H]
   \centering
   \input{031103a.latex}
+\caption{TODO: Hier muss eine Unterschrift rein!}
   \label{031103a}
 \end{figure}
 
@@ -504,7 +505,7 @@ $A:=(a_{1}, ... , a_{n})$ erhält und unter der Bedingung $1\leq k\leq n$ als Au
  \end{enumerate}
  Für die Selektion wird die "`Median-der-Mediane-Technik"' verwendet. 
 
- \subsection{Algorithmus \texorpdfstring{$SELECT(A^{n},k)$}{SELECT (A\textsuperscript{n},k)}:}
+ \subsection{Algorithmus \texorpdfstring{SELECT$(A^{n},k)$}{SELECT (A\textsuperscript{n},k)}}
  \addcontentsline{alg}{Algorithmus}{\textsc{Selektion}($A^n,\, k$)}
  Wähle beliebige feste Ganzzahl $Q$ (z.B. 5)
  \begin{description}
