Einleitung ein wenig griffiger formuliert
git-svn-id: https://svn.lug-jena.de/uni-skripte@2872 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -1212,27 +1212,26 @@ Die Datenbankmodelle, die wir bisher kennen gelernt haben, sind weit
 vom Endbenutzer entfernt. Die Datenbank ist nur von einem
 Anwendungsprogramm heraus ansprechbar. Also benötigt der Benutzer
 Programmierkenntnisse. Die Datenbanksprachen selbst sind schwer zu
-erlernen und fehlerfrei anzuwenden. Somit ist die Benutzung nur einem
+erlernen und kaum fehlerfrei anzuwenden. Somit ist die Benutzung nur einem
 kleinen Kreis von Spezialisten vorbehalten. Diese Eigenschaften
 führten dazu, dass Fehler gemacht wurden. Der modellierte Zustand
 entsprach nicht dem Zustand in der realen Welt und das DBMS wiederum
 konnte Inkonsistenzen nicht feststellen.
 
 Daher sollte ein neues Datenbankmodell geschaffen werden. Dies soll
-eine mathematisch fundierte Grundlage besitzen. Weiterhin soll es eine
-einfache Datenbanksprache geben. Bei der beschreibt der Benutzer, was
-er machen möchte. Die Umsetzung wird der Datenbank überlassen. Die
-Überwachung der Integrität und der Konsistenz wird dem DBMS
+eine mathematisch fundierte Grundlage und einfache Datenbanksprache
+besitzen. Der Benutzer beschreibt, was er machen möchte. Die Umsetzung
+sowie die Überwachung der Integrität und der Konsistenz wird dem DBMS
 überlassen. Dieses besitzt auch Informationen zur Semantik der Daten
 und kann die Korrektheit automatisch prüfen. Das Ergebnis dieser
 Überlegungen sind die relationalen Datenbanken.
 
 Ab Mitte der 1970er Jahre gab es von IBM das System~R als Prototyp
-sowie von der Universität of Berkeley Ingres.  Aus System~R wurde
+sowie von der Universität of Berkeley die Datenbank Ingres.  Aus System~R wurde
 später DB2 und Ingres wurde unter dem Namen weiterentwickelt. Davon
 abgeleitet ist unter anderem die Freie Software Postgres. Weitere
 bekannte relationale Datenbanken sind Oracle, Informix, Sybase,
-Adabas~D, MySQL und viele mehr.
+Adabas~D, MySQL und viele mehr.\todo{URLs zu Projekten einbauen}
 
 \section{Begriffe und Eigenschaften des relationalen Modells}
 
