Schlüsselwort in der Definitions-Umgebung war falsch
git-svn-id: https://svn.lug-jena.de/uni-skripte@2873 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -1245,12 +1245,12 @@ getrennt sein. Die Darstellung der Daten erfolgt mittels Relationen.
   $n\geq 1$ eine \highl{Relation}.
 \end{defini}
 
-\begin{defini}[Relation]
-  Die Zahl $n$ aus \autoref{def:relation} wird als \highl{Grad} oder
+\begin{defini}[Grad, Stelligkeit]
+  Die Zahl $n$ aus der \autoref{def:relation} wird als \highl{Grad} oder
   \highl{Stelligkeit} der Relation bezeichnet.
 \end{defini}
 
-\begin{defini}[Element, Komponente]
+\begin{defini}[Tupel, Komponente]
   Ein Element $r\in R$ mit $r= (d_{1},\dotsc, d_{n})$ für $d_{i}\in
   D_{i}$ heißt \highl{Tupel} und $d_{i}$ ist die
   \highl[Komponente]{$i$-te Komponente} des Tupels.
