--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -1387,12 +1387,13 @@ Entitytyps werden unmittelbar in Attribute der entsprechenden Relation
 Das unten dargestellte E/R"=Diagramm lässt sich in die Relation
 Abteilung(\underline{AbtNr}, Abteilungsort etc.) und
 Mitarbeiter(\underline{PersNr}, Name, AbtNr)
-überführen.\todo{(min,max)-Notation ergänzen}
+überführen.
 
 \begin{tikzpicture}[node distance=9em]
   \node[entity] (abt) {Abteilung};
-  \node[relationship] (hat) [right of=abt] {hat} edge (abt);
-  \node[entity] (ma) [right of=hat] {Mitarbeiter} edge (hat);
+  \node[relationship] (hat) [right of=abt] {hat} edge node[auto,swap] {(0,*)} (abt);
+  \node[entity] (ma) [right of=hat] {Mitarbeiter} edge node[auto,swap]
+  {(1,1)}(hat);
 \end{tikzpicture}
 
 \subsection{Rekursive 1:n-Beziehungstypen}
