Zeichnung in 131003a.latex nach TikZ portiert
git-svn-id: https://svn.lug-jena.de/uni-skripte@2878 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-info3/skript.tex
+++ b/hecker-info3/skript.tex
@@ -28,6 +28,7 @@
                          % dafür muss in SVN noch das Flag svn:keywords
                          % auf "LastChangedRevision LastChangedDate"
                          % gesetzt werden
+\usepackage{tikz}
 
 \theoremstyle{break}
 \theorembodyfont{\upshape}
@@ -124,7 +125,12 @@ eines Problems} beschreibt, dienen \textbf{Datenstrukturen}
 
 \begin{figure}
   \centering
-  \input{131003a.latex}
+  \begin{tikzpicture}
+    \draw (1,1) -- (3,1) -- (3,2.8) -- (1,2.8) -- (1,1);
+    \draw (2,3) -- (3,3) -- (3,3.5) -- (2,3.5) -- (2,3);
+    \draw (2.6,2) -- (6.5,2) -- (6.5,4) -- (2.6,4) -- (2.6,2);
+  \end{tikzpicture}
+%  \input{131003a.latex}
   \caption{Überlappen sich die drei Rechtecke?}
   \label{131003a}
 \end{figure}
