Grafik mit überschneidenden Linien nach TikZ portiert
git-svn-id: https://svn.lug-jena.de/uni-skripte@2879 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-info3/skript.tex
+++ b/hecker-info3/skript.tex
@@ -145,7 +145,16 @@ heißt \textbf{Output}.
 
 \begin{figure}
   \centering
-  \input{131003b.latex}
+  \begin{tikzpicture}
+    \draw (2,2) -- (2,5);
+    \draw (3,4) -- (3,5);
+    \draw (5,3.4) -- (5,4.6);
+    \draw (1.8,4.4) -- (4,4.4);
+    \draw (0,4.1) -- (2.5,4.1);
+    \draw (3.6,4) -- (6,4);
+    \draw (1,2.8) -- (3,2.8);
+  \end{tikzpicture}
+%  \input{131003b.latex}
   \caption{Das Segmentschnitt-Problem}
   \label{131003b}
 \end{figure}
