: im Mathemodus in \colon übertragen
git-svn-id: https://svn.lug-jena.de/uni-skripte@2881 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-info3/skript.tex
+++ b/hecker-info3/skript.tex
@@ -333,7 +333,7 @@ Die worst-case-Zeit $T$ für den Algorithmus $a$ für Eingaben der Länge $n$
 ist das Maximum der Laufzeiten für alle möglichen Eingaben dieser
 Länge:
 \begin{gather*}
-  T_a(n) = \max_{w:|w|=n}\big\{T_a(w)\big\}
+  T_a(n) = \max_{w\colon |w|=n}\big\{T_a(w)\big\}
 \end{gather*}
 
 Es sei an dieser Stelle angemerkt, daß die worst-case-Betrachtung mitunter
@@ -366,8 +366,8 @@ auch für den Gesamtalgorithmus eine untere Schranke.
 
 Wenn die Menge $Y$ in einer Datenstruktur verwaltet wird, die 
 \textit{INSERT}, \textit{DELETE} und \textit{SEARCH} unterstützt, so
-reichen $O(n\: \log\,n)$ Schritte sowie zusätzlich $O(k)$ Schritte für
-die Ausgabe. Der gesamte Algorithmus ist somit in $O(n\:log\,n+k)$ zu
+reichen $O(n \log n)$ Schritte sowie zusätzlich $O(k)$ Schritte für
+die Ausgabe. Der gesamte Algorithmus ist somit in $O(n\log n+k)$ zu
 bewältigen.
 
 % 15.10.03 Nina Kottenhagen
@@ -562,20 +562,15 @@ bessere Algorithmen.
 
 \section{Die O-Notation}
 $\forall_n^\infty$ bedeutet für alle $n$ bis auf endlich viele
-Ausnahmen, gleichbedeutend mit $\exists n_0 \in \mathbb{N}: \forall n\geq n_0$
+Ausnahmen, gleichbedeutend mit $\exists n_0 \in \mathbb{N}\colon  \forall n\geq n_0$
 \begin{align*}
-  O(g(n)) &:= \{ f(n) | \exists c_2 > 0, n_0 \in \mathbb{N}:\:
-    \forall_n^\infty: 0\leq f(n)\leq c_2\,g(n)\}\\
-  \Omega(g(n)) &:= \{ f(n) | \exists{}c_1 > 0, n_0 \in  \mathbb{N}:\:
-    \forall_n^\infty: 0\leq c_1\,g(n)\leq f(n) 
+  O(g(n)) &:= \{ f(n) | \exists c_2 > 0, n_0 \in \mathbb{N}\ \forall_n^\infty\colon  0\leq f(n)\leq c_2\,g(n)\}\\
+  \Omega(g(n)) &:= \{ f(n) | \exists{}c_1 > 0, n_0 \in\mathbb{N}\ \forall_n^\infty\colon  0\leq c_1\,g(n)\leq f(n) 
     \} \\
-  \Theta(g(n)) &:= \{ f(n) | \exists c_1, c_2 > 0, n_0 \in \mathbb{N}:\: 
-    \forall_n^\infty: c_1\,g(n)\leq f(n)\leq c_2\,g(n)\} =
+  \Theta(g(n)) &:= \{ f(n) | \exists c_1, c_2 > 0, n_0 \in \mathbb{N}\ \forall_n^\infty\colon  c_1\,g(n)\leq f(n)\leq c_2\,g(n)\} =
     \hfill O(g(n)) \cap \Omega(g(n))\\
-o(g(n)) &:= \{ f(n) | \exists c_2 > 0, n_0 \in \mathbb{N}:\:
-    \forall_n^\infty: 0\leq f(n)< c_2\,g(n)\}\\
-\omega(g(n)) &:= \{ f(n) | \exists{}c_1 > 0, n_0 \in  \mathbb{N}:\:
-    \forall_n^\infty: 0\leq c_1\,g(n)< f(n) 
+o(g(n)) &:= \{ f(n) | \exists c_2 > 0, n_0 \in \mathbb{N}\ \forall_n^\infty\colon  0\leq f(n)< c_2\,g(n)\}\\
+\omega(g(n)) &:= \{ f(n) | \exists{}c_1 > 0, n_0 \in  \mathbb{N}\ \forall_n^\infty\colon  0\leq c_1\,g(n)< f(n) 
     \}
 \end{align*} 
 
@@ -598,7 +593,7 @@ Es sei $f(n) = n^2+99n$
 
 \item   Behauptung: $f \in \Omega(n^2)$\\
         Hier werden Werte $c>0,\,n_0 \in \mathbf{N}$ gesucht für die gilt: $f(n) \geq c\,n^2\ \forall n\geq n_0$. Also $n^2+99n \geq
-        c\,n^2$. Das läßt sich umformen zu $99n \geq (c-1)n^2$ und weiter zu $99 \geq (c-1)n$, also ist jedes $c: 0<c \leq 1$ eine
+        c\,n^2$. Das läßt sich umformen zu $99n \geq (c-1)n^2$ und weiter zu $99 \geq (c-1)n$, also ist jedes $c\colon  0<c \leq 1$ eine
         Lösung.
 
 \item   Behauptung: $f \in \Theta(n^2)$\\
@@ -991,7 +986,7 @@ dann gilt asymptotisch für große $n$.
 \item \(\textup{f}(n) \in\Theta(n^{\log_ba}) \rightarrow \textup{T}(n) \in\Theta(n^{\log_ba}\,\log n)\)
 
 \item \((\textup{f}(n) \in\Omega(n^{\log_ba+\varepsilon} ) \) (mit \( \varepsilon > 0 \) fest)
-\(\wedge\ \exists c < 1 : \forall^{\infty}_{n}
+\(\wedge\ \exists c < 1 \colon  \forall^{\infty}_{n}
 a\,\textup{f}\left(\frac{n}{b}\right)  \leq c\,\textup{f}(n)) \rightarrow \textup{T}(n) \in \Theta(\textup{f}(n))\)
 \end{enumerate}
 
@@ -1241,11 +1236,11 @@ $\textup{T}(n)=\textup{T}(2^k)=\textup{S}(k)=\textup{O}(k\,log\,k)=\textup{O}(lo
 \label{mastertheorem_Fall3}
 
 \( \textup{T}(n) = 3\,\textup{T}\left(\frac{n}{4}\right) + 2n\log n \Rightarrow a=3,\ b=4\) und \(\log_ba<1 \rightarrow 
-\textup{f}(n) \in \Omega(n^{log_43+\varepsilon})\) da \(\forall n \in \mathbb{N}:\,n>0:\,n^{log_43}<2n\log n\).
+\textup{f}(n) \in \Omega(n^{log_43+\varepsilon})\) da \(\forall n \in \mathbb{N}\colon \,n>0\colon \,n^{log_43}<2n\log n\).
 
-Es könnte sich also um den dritten Fall handeln, dazu muß aber noch ein \(c < 1 : \forall^{\infty}_{n}:
+Es könnte sich also um den dritten Fall handeln, dazu muß aber noch ein \(c < 1 \colon  \forall^{\infty}_{n}\colon 
 a\,\textup{f}\left(\frac{n}{b}\right)  \leq c\,\textup{f}(n)\) existieren. Gibt es also ein 
-\(c<1:\,\forall^{\infty}_{n}:\,3\textup{f}\left(\frac{n}{4}\right) \leq c\textup{f}(n)\)? Ja, denn
+\(c<1\colon \,\forall^{\infty}_{n}\colon \,3\textup{f}\left(\frac{n}{4}\right) \leq c\textup{f}(n)\)? Ja, denn
 
 \begin{align*}
 3\textup{f}\left(\frac{n}{4}\right) & \leq & c\,\textup{f}(n)\\
