Alle \ref durch \autoref ersetzt.
git-svn-id: https://svn.lug-jena.de/uni-skripte@2884 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-info3/skriptb.tex
+++ b/hecker-info3/skriptb.tex
@@ -70,7 +70,7 @@ a_{\textup{i}}<a_{\textup{j}}\}\) angehören, wird der zweite Funktionsaufruf im
 enthalten, da A deterministisch ist und zu diesem Zeitpunkt nur weiß, daß \(a_{\textup{i}}<a_{\textup{j}}\) ist. Analog wird für alle
 Folgen a(j$<$i) derselbe Funktionsaufrauf als zweiter ausgeführt. Die Fortführung dieser überlegung führt zu dem vergleichsbasierten
 Entscheidungsbaum von Algorithmus A, einem binären Baum, dessen Knoten mit Vergleichen "`\(a_{\textup{i}}<a_{\textup{j}}\)"' beschriftet
-sind. An den Kanten steht entweder "`j"' oder "`n"'. Ein kleines Beispiel ist in Abbildung~\ref{271003c} zu sehen.
+sind. An den Kanten steht entweder "`j"' oder "`n"'. Ein kleines Beispiel ist in \autoref{271003c} zu sehen.
 
 Genau die Eingabetupel aus der Menge \(\textup{a}(3<4)\cap \textup{a}(3<2)=\{(a_1,\ldots,a_{\textup{n}})\in \mathbb{R}^n : a_3<a_4 \wedge
 a_3<a_2\}\) führen zum Knoten $\mathcal{V}$. 
@@ -93,7 +93,7 @@ als $n!$ Blätter. Es gibt auch Knoten, die die leere Menge enthalten, oder Knot
 \bigskip
 
 \noindent	
-Beispiele für den Baum aus Abbildung~\ref{271003c}:
+Beispiele für den Baum aus \autoref{271003c}:
 
 \noindent
 Bei der Eingabe (3, 4, 17, 25) wäre man nach Abarbeitung der Vergleiche 17$<$25, 4$<$17 und 3$<$4 im linkesten Knoten.
@@ -432,7 +432,7 @@ T(n)=(n+1)+ \frac{1}{n}\sum_{1\leq k\leq n}[T(k-1)+ T(n-k)]= (n+1)+ \frac{2}{n} 
 \end{gather*}
 
 Zur Lösung dieser Rekurrenz wird zuerst die Summe beseitigt, dies sollte jeder selbst nachvollziehen.
-Die ausführliche Rechnung steht im Anhang \ref{quicksort}. Es ergibt sich \(\frac{T(n)}{n+1}= \frac{T(n-1)}{n}+ \frac{2}{n+1}\) und
+Die ausführliche Rechnung steht im \autoref{quicksort}. Es ergibt sich \(\frac{T(n)}{n+1}= \frac{T(n-1)}{n}+ \frac{2}{n+1}\) und
 Einsetzen der Rekurrenz führt zu:
 
 %\begin{align*}
@@ -870,7 +870,7 @@ das Element kleiner ist.
 Die übergebene Variable x ist der Index im Array und k ist der neue Schlüsselwert. Der Vater des Knotens x in
 der Baumstruktur wird mit p[x] bezeichnet.
 \end{Algorithmus}
-\textsc{IncreaseKey} kostet $O(\log n)$, dazu siehe auch Skizze~\ref{121103a}.
+\textsc{IncreaseKey} kostet $O(\log n)$, dazu siehe auch \autoref{121103a}.
 Damit wird \textsc{IncreaseKey} unterstützt und wir wenden uns der Operation \textsc{Insert} zu.
 Dabei wandert key solange nach oben, bis die Heap-Eigenschaft wieder gilt. Damit kostet auch \textsc{Insert} $O(\log n)$.
 
@@ -930,7 +930,7 @@ Der kürzeste Pfad verläuft entlang der Kanten des Sichtbarkeitsgraphen (Lorenz
 \end{satz}
 Problem \textsc{all-to-one shortest paths}
 
-One (In Abbildung~\ref{121103d} ist das der Punkt a) ist der Startpunkt und von allen anderen
+One (In \autoref{121103d} ist das der Punkt a) ist der Startpunkt und von allen anderen
 Punkten wird der kürzeste Weg dahin berechnet.
 Die Gewichte an den Kanten sind dabei immmer $\geq 0$.
 
@@ -977,7 +977,7 @@ dieses Skriptes sein.
 \end{Algorithmus}   % noch nicht fertig
 
 Ein einfaches Beispiel soll seine Funktion veranschaulichen. Die verwendeten Knoten und Kanten entsprechen denen
-aus Abbildung~\ref{121103d}. Jede Zeile der Tabelle entspricht einer Ausführung des Rumpfes der while Schleife (ab Zeile 5)
+aus \autoref{121103d}. Jede Zeile der Tabelle entspricht einer Ausführung des Rumpfes der while Schleife (ab Zeile 5)
 und zeigt die Werte, welche die verschiedenen Variablen annehmen. Aus Gründen der übersicht werden nur 3 Spalten
 augeführt, der / tritt deshalb nochmal als Trennhilfe auf:
 
@@ -1531,7 +1531,7 @@ Nun ist klar ersichtlich, daß ein Baum, der immer logarithmische Höhe haben so
 Falls also das Einfügen eines Elemente in einen Baum die Baumstruktur so ändert, daß die Eigenschaften 
 verletzt sind, muß der Baum repariert werden.
 
-Wie in Abbildung \ref{241103b} zu sehen ist, kann das Einfügen eines einzigen Knotens dazu führen, daß eine neue Ebene
+Wie in \autoref{241103b} zu sehen ist, kann das Einfügen eines einzigen Knotens dazu führen, daß eine neue Ebene
 einfügt werden muß. Falls dies in der untersten Ebene geschieht (worst-case), kann sich das bis zur Wurzel fortsetzen.	
 Top down 2-3-4 Bäume sollen diese Situation verhindern! 
  
@@ -1586,8 +1586,8 @@ werden.
  \end{figure}
 
 \begin{beweis} 
- IA : Sei $h=0$. Dann handelt es um einen Baum, der nur aus einem NIL-Blatt besteht. Dann ist $Bh(x)=0$ und nach Satz \ref{schwarzhoehe} 
- die Anzahl der inneren Knoten mindestens $2^0-1=0$. Damit ist der Induktionsanfang für Satz \ref{schwarzhoehe} gezeigt. 
+ IA : Sei $h=0$. Dann handelt es um einen Baum, der nur aus einem NIL-Blatt besteht. Dann ist $Bh(x)=0$ und nach \autoref{schwarzhoehe} 
+ die Anzahl der inneren Knoten mindestens $2^0-1=0$. Damit ist der Induktionsanfang für \autoref{schwarzhoehe} gezeigt. 
  \medskip
  
  \noindent IS : Sei nun h'$<$h. Dazu betrachten wir die zwei Teilbäume eines Baumes mit der Höhe $h$ und der Wurzel $x$.
@@ -1607,13 +1607,13 @@ Dann gibt es jeweils für den rechten und den linken Teilbaum zwei Fälle. Dabei
      
     \textbf{2.Fall}:  Sei $Bh(li[x]) = Bh[x]-1$, dann gibt mindestens soviele innere Knoten, wie die beiden
     Teilbäume nach Induktionsvoraussetzung zusammen haben. Damit hat der gesamte Baum mindestens   
-    $1+2^{Bh(x)-1}-1+2^{Bh(x)-1}-1$  $=$ $2 \cdot 2^{Bh(x)-1}+1-2 = 2^{Bh(x)}-1$. Damit ist Satz \ref{schwarzhoehe} bewiesen. 
+    $1+2^{Bh(x)-1}-1+2^{Bh(x)-1}-1$  $=$ $2 \cdot 2^{Bh(x)-1}+1-2 = 2^{Bh(x)}-1$. Damit ist \autoref{schwarzhoehe} bewiesen. 
     
-Zum Beweis von Satz \ref{rshoehe} wird Eigenschaft 4 der Rot-Schwarz-Bäume ausgenutzt. Daraus folgt direkt, daß auf dem Weg von der Wurzel zu den Blättern,
+Zum Beweis von \autoref{rshoehe} wird Eigenschaft 4 der Rot-Schwarz-Bäume ausgenutzt. Daraus folgt direkt, daß auf dem Weg von der Wurzel zu den Blättern,
 mindestens die Hälfte der Knoten schwarz ist. Sei $h$ wieder die Höhe des Baumes, dann gilt damit 
 
 \begin{quote}       
-        $Bh(root) \geq \frac{h}{2}\stackrel{\scriptstyle{S.}\, \ref{schwarzhoehe}}{\longrightarrow}$\\
+        $Bh(root) \geq \frac{h}{2}\stackrel{\text{\autoref{schwarzhoehe}}}{\longrightarrow}$\\
         $n \geq 2^{Bh(root)}-1 \geq 2^{\frac{h}{2}}-1 \Rightarrow 2^{\frac{h}{2}}\leq n+1$ \hspace{2cm}$|$ $\log$\\
         $\Leftrightarrow \frac{h}{2}\leq \log(n+1)$  \hfill q.e.d  
 \end{quote}
@@ -1740,7 +1740,7 @@ sein.
 \end{Algorithmus}
 
 Eine mögliche Anwendung für einen Rot-Schwarz-Baum ist das bereits einleitend erwähnte Segmentschnitt-Problem. Dabei kann ein
-Rot-Schwarz-Baum für die Verwaltung der Sweepline-Status-Struktur verwendet werden (Menge Y, dazu siehe auch Anhang \ref{planesweep}).
+Rot-Schwarz-Baum für die Verwaltung der Sweepline-Status-Struktur verwendet werden (Menge Y, dazu siehe auch \autoref{planesweep}).
 
 % 01.12.2003 Sylvia Andersch
 \section{Optimale binäre Suchbäume}
@@ -2123,10 +2123,10 @@ oberhalb von G$_{p_l p_r}$ (dies läßt sich notfalls in O($n \log n$) Zeit erre
 \end{lstlisting}
 \end{Algorithmus}
 
-Der Drehsinn läßt sich dabei mathematisch recht einfach feststellen (siehe Anhang \ref{drehsinn}), die Details sind an dieser Stelle
+Der Drehsinn läßt sich dabei mathematisch recht einfach feststellen (siehe \autoref{drehsinn}), die Details sind an dieser Stelle
 aber weniger wichtig.
 Doch wie kann man das für die Berechnung
-der konvexen Hülle ausnutzen? Zeichnung \ref{konvexedrehungskizze} macht dies sehr anschaulich klar. Die Punkte sind jeweils die
+der konvexen Hülle ausnutzen? \autoref{konvexedrehungskizze} macht dies sehr anschaulich klar. Die Punkte sind jeweils die
 Endpunkte der eingezeichneten Strecken und daher nicht explizit markiert. Im rechten Fall wird der Punkt $p_2$ für die konvexe Hülle
 überflüssig, da er durch $p_{s+1}$ "`überdeckt"' wird. Im linken Bild ist $p_2$ hingegen für die konvexe Hülle notwendig ($p_2$
 liege oberhalb der Strecke $\overline{p_1p_{s+1}}$). Dies verdeutlicht anschaulich, warum ein Punkt der durch
@@ -2155,7 +2155,7 @@ Bereits anfangs wurde das Problem der überschneidung von Rechtecken erwähnt. E
 Bericht der überschneidungen. Dazu kann man
 \begin{enumerate}
 \item alle Rechteckseiten bestimmen und dann
-\item den Sgmentschnitt-Algorithmus benutzen (siehe Anhang \ref{planesweep})
+\item den Sgmentschnitt-Algorithmus benutzen (siehe \autoref{planesweep})
 \end{enumerate}
 
 Der dabei verwendete abstrakte Datentyp Dictionary könnte mit den bisher kenngelernten Methoden z.B. RS-, AVL- oder
@@ -2198,8 +2198,8 @@ Mit der Eingabe ist die Menge der $y$-Werte gegeben, welche nach steigendem $y$ 
 Beispiel wird dies vielleicht klarer.
 
 Seien die $y$-Werte 0, 1, 3, 6, 9 als sogenannte Roatorpunkte \textcolor{red}{Stimmt das?}, die zu den Elementarintervallen
-[0, 1], [1, 3], [3, 6] und [6, 9] führen und die Rechtecke wie in Skizze \ref{031203f} gegeben. Daraus resultiert dann der Baum wie in
-Abbildung \ref{031203g}.
+[0, 1], [1, 3], [3, 6] und [6, 9] führen und die Rechtecke wie in \autoref{031203f} gegeben. Daraus resultiert dann der Baum wie in
+\autoref{031203g}.
 
 \begin{figure}[H]
 \centering
@@ -2227,12 +2227,11 @@ Abbildung \ref{031203g}.
 
 \end{figure}
 
-Aus Abbildung \ref{031203f} geht der Baum hervor, der rechts in der Abbildung \ref{031203g} zu sehen ist. Der dritte Wert jedes Tupels
+Aus \autoref{031203f} geht der Baum hervor, der rechts in der \autoref{031203g} zu sehen ist. Der dritte Wert jedes Tupels
 in jedem Knoten
 gibt dabei das Maximum der Tupel im linken Teilbaum dieses Knotens an. Etwas verständlicher, aber formal falsch, ist folgende
 Formulierung: Der dritte Wert jedes Knotens gibt den maximalen Wert seines linken Teilbaumes an.
-Der linke Teil von Abbildung
-\ref{031203g} deutet an, wie die Struktur im allgemeinen Fall bzw. als "`Leerstruktur"' aussieht. In der untersten Abbildung zeigen a) und
+Der linke Teil von \autoref{031203g} deutet an, wie die Struktur im allgemeinen Fall bzw. als "`Leerstruktur"' aussieht. In der untersten Abbildung zeigen a) und
 b) wie die Struktur aufgebaut wird. Teil c) verdeutlicht nochmal die überlappung der Intervallgrenzen (im obigen Beispiel!) und macht
 gleichzeitig folgenden Satz klar.
 
@@ -2256,7 +2255,7 @@ Suchbäume. Damit funktioniert das Suchen in O($\log m$) Zeit, und die Ausgabe h
 der Schnitte. Für das Insert wird eine passende rekursive Prozedur geschrieben, die den Suchpfad abtestet und dei Eintragungen
 vornimmt; dies geht in ebenfalls in O($\log m$) Zeit.
 Damit haben wir einen output-sensitiven Algorithmus mit einer Gesamtlaufzeit von O($k +m \log m$), dazu siehe auch den Anfang des
-Skriptes und Anhang \ref{planesweep}.
+Skriptes und \autoref{planesweep}.
 
 \chapter{Verwaltung von Mengen -- kompliziertere Datenstrukturen}
 Die Operationen \textsc{Make-Heap}(), \textsc{Insert}(H, x), \textsc{Min}(H) und \textsc{Extract-Min}(H) sollten an dieser Stelle
@@ -2550,7 +2549,7 @@ Kosten der i-ten Operation ergeben sich als ${\Phi}_i-{\Phi}_{i-1}$.
 
 Hierbei muß \[\sum_{i=1}^n AK_i=\sum_{i=1}^n (K_i+{\Phi}_i-{\Phi}_{i-1})\] gelten.
 
-Dies (Teleskopsumme, s. Anhang \ref{Teleskopsumme}) läßt sich zu \[\sum_{i=1}^n AK_i=\sum_{i=1}^n
+Dies (Teleskopsumme, \autoref{Teleskopsumme}) läßt sich zu \[\sum_{i=1}^n AK_i=\sum_{i=1}^n
 K_i+{\Phi}_n-{\Phi}_0\] umformen.
 
 Als drittes muß (${\Phi}_n-{\Phi}_0 \geq 0$) sein, speziell ${\Phi}_n \geq 0$, falls ${\Phi}_0=0$. Damit folgt
