Ein paar TODOs an den Dateianfang
git-svn-id: https://svn.lug-jena.de/uni-skripte@2887 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-info3/skript.tex
+++ b/hecker-info3/skript.tex
@@ -1,3 +1,7 @@
+%% TODO: - O-Notation korrigieren
+%%       - Befehl für Algorithmen anlegen
+%%       - Leerzeichen im Mathesatz korrigieren
+
 \RequirePackage[l2tabu,orthodox]{nag}  % nag überprüft den Text auf veraltete
                    % Befehle oder solche, die man nicht in LaTeX verwenden
                    % soll -- l2tabu-Checker in LaTeX
@@ -288,10 +292,10 @@ DELETE und SEARCH unterstützt. Dieser wird in einem späteren Kapitel noch beha
   \textit{DELETE}, \textit{SEARCH} unterstützt, heißt \textbf{dictionary}.
 \end{definition}
 
-Der obige \textsc{Plane-Sweep}-Algorithmus benötigt O($n\,log(n)$) Schritte
+Der obige \textsc{Plane-Sweep}-Algorithmus benötigt O($n\log(n)$) Schritte
 für das Sortieren (siehe unten O-Notation). Da es sich um einen \textbf{output-sensitiven}
 Algorithmus handelt, belaufen sich seine Gesamtkosten auf
-O($n\,log(n)+k$), was meist deutlich besser ist als proportionales Verhalten
+O($n\log(n)+k$), was meist deutlich besser ist als proportionales Verhalten
 zu $n^2$.
 
 Dieses Verfahren erweist sich jedoch mit Hilfe von Arrays als nicht
@@ -353,7 +357,7 @@ etabliert:
     prop. zu $n^2$ viele Schritte benötigt. 
    \item[$\Theta$-Notation:]
     Der Algorithmus benötigt höchstens aber auch mindestens so viele
-    Schritte wie angegeben (Verknüfpung von O$\,$- und $\Omega$-Notation)
+    Schritte wie angegeben (Verknüfpung von O- und $\Omega$-Notation)
   \end{description}
 \end{definition}
 Die genaue mathematische Definition erfolgt später.
