--- a/vorlage/skript.ltx
+++ b/vorlage/skript.ltx
@@ -1,18 +1,18 @@
-% Einige zusätzliche Informationen für rubber
+% Einige zusÃ¤tzliche Informationen fÃ¼r rubber
 %  rubber erkennt nicht, dass die Datei weg kann, daher sagen wir es ihm
 % rubber: clean $base.thm
-%  rubber soll nach Änderungen an der Datei nochmal bauen
+%  rubber soll nach Ã„nderungen an der Datei nochmal bauen
 % rubber: watch $base.thm
 % rubber: index.tool      xindy
 % rubber: index.language  german-din
 %
-% scrreprt trifft am Besten die Bedürfnisse eines Skripts, das ganze wird
+% scrreprt trifft am Besten die BedÃ¼rfnisse eines Skripts, das ganze wird
 % zweiseitig (twoside), d.h. es wird zwischen linker und rechter Seite
-% unterschieden, und wir verwenden zwischen den Absätzen einen Abstand
-% von einer halben Zeile (halfparskip) und dafür keinen Absatzeinzug,
+% unterschieden, und wir verwenden zwischen den AbsÃ¤tzen einen Abstand
+% von einer halben Zeile (halfparskip) und dafÃ¼r keinen Absatzeinzug,
 % wobei die letzte Zeile eines Absatzes zu min. 1/4 leer ist.
 
-\RequirePackage[l2tabu,orthodox]{nag}  % nag überprüft den Text auf veraltete
+\RequirePackage[l2tabu,orthodox]{nag}  % nag Ã¼berprÃ¼ft den Text auf veraltete
                    % Befehle oder solche, die man nicht in LaTeX verwenden
                    % soll -- l2tabu-Checker in LaTeX
 
@@ -24,74 +24,74 @@
 
 \usepackage{ifthen}
 \usepackage{index}
-% \usepackage[final]{graphicx}  % Für Grafiken
+% \usepackage[final]{graphicx}  % FÃ¼r Grafiken
 \usepackage{xcolor}
 \usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue,breaklinks]{hyperref}
 
-\usepackage[latin1]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage{babel}
 % \usepackage{nicefrac}
 % \usepackage{tabularx}
 
 \usepackage{lmodern}		% Latin Modern
 % \usepackage{type1ec}           % cm-super
-\usepackage[T1]{fontenc}        % T1-Schriften notwendig für PDFs
-\usepackage{textcomp}           % wird benötigt, damit der \textbullet
-                                % für itemize in lmodern gefunden wird.
+\usepackage[T1]{fontenc}        % T1-Schriften notwendig fÃ¼r PDFs
+\usepackage{textcomp}           % wird benÃ¶tigt, damit der \textbullet
+                                % fÃ¼r itemize in lmodern gefunden wird.
 
 \usepackage[intlimits,leqno]{amsmath}
 \usepackage[all,warning]{onlyamsmath}  % warnt bei Verwendung von nicht
                                        % amsmath-Umgebungen z.\,B. $$...$$
-\usepackage{amssymb}     % wird für \R, \C,... gebraucht
+\usepackage{amssymb}     % wird fÃ¼r \R, \C,... gebraucht
 \usepackage{fixmath}     % ISO-konforme griech. Buchstaben
 \usepackage[euro]{isonums} % definiert Komma als Dezimaltrennzeichen
 
-\usepackage[amsmath,thmmarks,hyperref]{ntheorem} % für die Theorem-Umgebungen
+\usepackage[amsmath,thmmarks,hyperref]{ntheorem} % fÃ¼r die Theorem-Umgebungen
                                                  % (satz, defini, bemerk)
 \usepackage{xspace}      % wird weiter unten gebraucht
-\usepackage{slashbox}    % für schräge Striche links oben in der
+\usepackage{slashbox}    % fÃ¼r schrÃ¤ge Striche links oben in der
                          % Tabelle; s. texdoc slashbox
 
 \usepackage{paralist}    % besseres enumerate und itemize und neue
                          % compactenum/compactitem; s. texdoc paralist
 
 \usepackage{svn}         % Zum Auswerten und ordentlichen Darstellen der
-                         % SVN-Schlüsselwörter (s. vor \begin{document})
-                         % dafür muss in SVN noch das Flag svn:keywords
+                         % SVN-SchlÃ¼sselwÃ¶rter (s. vor \begin{document})
+                         % dafÃ¼r muss in SVN noch das Flag svn:keywords
                          % auf "LastChangedRevision LastChangedDate"
                          % gesetzt werden
-% \usepackage{ifpdf}       % Erkennung, ob PDF generiert wird; nützlich zur
+% \usepackage{ifpdf}       % Erkennung, ob PDF generiert wird; nÃ¼tzlich zur
                          % Unterscheidung bei Grafiken \input{XYZ.pdf_t}
-\usepackage{ellipsis}    % Korrektur für \dots
+\usepackage{ellipsis}    % Korrektur fÃ¼r \dots
 \usepackage{fixltx2e}
 \usepackage[final,babel]{microtype} % Verbesserung der Typographie
 \usepackage{mathtools}   % Zur Definition von \abs und \norm
 \usepackage{todonotes}   % definiert den Befehl \todo{} um sich leicht
-                         % Markierungen für offene Aufgaben zu setzen; wird
-                         % auch für \help (s.u.) verwendet
+                         % Markierungen fÃ¼r offene Aufgaben zu setzen; wird
+                         % auch fÃ¼r \help (s.u.) verwendet
 
-% Damit auch die Zeichen im Mathemode in Überschriften fett sind
+% Damit auch die Zeichen im Mathemode in Ãœberschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
 \addtokomafont{sectioning}{\boldmath}
 
-% nach dem Theoremkopf wird ein Zeilenumbruch eingefügt, die Schrift des
-% Körpers ist normal und der Kopf wird fett gesetzt
+% nach dem Theoremkopf wird ein Zeilenumbruch eingefÃ¼gt, die Schrift des
+% KÃ¶rpers ist normal und der Kopf wird fett gesetzt
 \theoremstyle{break}
 \theoremnumbering{arabic}
 \theorembodyfont{\normalfont}
 \theoremheaderfont{\normalfont\bfseries}
 
-% Das Ende von Umgebungen, für die kein Beweis erbracht wurde, soll mit einer
+% Das Ende von Umgebungen, fÃ¼r die kein Beweis erbracht wurde, soll mit einer
 % leeren Box gekennzeichnet werden. Wenn jedoch ein Beweis erbracht wurde,
-% soll kein Zeichen ausgegeben werden (die ausgefüllte Box vom proof wird
-% verwendet); man beachte die spezielle Definition von \theoremheaderfont für
+% soll kein Zeichen ausgegeben werden (die ausgefÃ¼llte Box vom proof wird
+% verwendet); man beachte die spezielle Definition von \theoremheaderfont fÃ¼r
 % die Umgebung proof
 % \newboolean{hasproof}
 % \theoremheaderfont{\global\hasprooffalse\normalfont\bfseries}
 % \theoremsymbol{\ifthenelse{\boolean{hasproof}}{}{\ensuremath{_\Box}}}
 
 % Die folgenden Umgebungen werden einzeln nummeriert und am Ende jedes
-% Kapitels zurückgesetzt
+% Kapitels zurÃ¼ckgesetzt
 \newtheorem{satz}{Satz}[chapter]
 \newtheorem{bemerk}{Bemerkung}[chapter]
 \newtheorem{defini}{Definition}[chapter]
@@ -126,17 +126,17 @@
 
 \newcommand*{\R}{\mathbb{R}}      % reelle Zahlen
 \newcommand*{\C}{\mathbb{C}}      % komplexe Zahlen
-\newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
+\newcommand*{\N}{\mathbb{N}}      % natÃ¼rliche Zahlen
 \newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
 \newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
 
-% Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, können sie
+% Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, kÃ¶nnen sie
 % einfach mit \help{Ich verstehe das nicht} hervorgehoben werden. Dies
 % macht es leichter sie alle zu finden und auch ganz einfach
 % auszublenden, indem man den Befehl einfach leer definiert
 \newcommand*{\help}[1]{\todo[color=green!40]{#1}}
 
-% Um wichtige Begriffe im Text überall gleich vorzuheben (gleiches
+% Um wichtige Begriffe im Text Ã¼berall gleich vorzuheben (gleiches
 % Markup), sollte dieser Befehl verwendet werden. Das Argument wird
 % automatisch als Indexeintrag verwendet. Dieser kann aber auch als
 % optionales Argument selbst bestimmt werden.
@@ -144,15 +144,15 @@
   \ifthenelse{\equal{#1}{}}{\index{#2}}{\index{#1}}%
 }
 
-% Befehl für die Darstellung der Gliederungsüberschriften im Index
+% Befehl fÃ¼r die Darstellung der GliederungsÃ¼berschriften im Index
 \newcommand*{\lettergroup}[1]{\minisec{#1}}
 
-% Für Leute, die nicht gern o.\,B.\,d.\,A. jedesmal eintippen wollen
+% FÃ¼r Leute, die nicht gern o.\,B.\,d.\,A. jedesmal eintippen wollen
 \newcommand*{\obda}{o.\,B.\,d.\,A.\xspace}
 
-% Diese Befehle sind dafür gedacht, dass die Symbole für "genau dann wenn"
-% im ganzen Dokument gleich aussehen. Außerdem erlaubt es eine schnelle
-% Veränderung aller Stellen, falls der Prof. doch nicht mehr gdw nimmt,
+% Diese Befehle sind dafÃ¼r gedacht, dass die Symbole fÃ¼r "genau dann wenn"
+% im ganzen Dokument gleich aussehen. AuÃŸerdem erlaubt es eine schnelle
+% VerÃ¤nderung aller Stellen, falls der Prof. doch nicht mehr gdw nimmt,
 % sondern \Leftrightarrow.
 \newcommand*{\gdw}{\ifthenelse{\boolean{mmode}}%
 			       {\mspace{8mu}gdw\mspace{8mu}}%
@@ -163,22 +163,22 @@
 
 % Um sicherzustellen, dass jeder Betrag/jede Norm links und rechts die
 % Striche bekommt, sind diese Befehle da. Damit kann man nicht die
-% rechten Striche vergessen und es wird etwas übersichtlicher. Aus
+% rechten Striche vergessen und es wird etwas Ã¼bersichtlicher. Aus
 % mathtools.pdf, z. B. \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
 \DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
 
-% Für die Gaußklammer empfiehlt sich ebenso eine Definition mit
+% FÃ¼r die GauÃŸklammer empfiehlt sich ebenso eine Definition mit
 % Benutzung von mathtools.
 \DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
 \DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
 
 % Das original Epsilon sieht nicht so toll aus
 \renewcommand*{\epsilon}{\varepsilon}
-% ... und mancheinem gefällt auch das Phi nicht
+% ... und mancheinem gefÃ¤llt auch das Phi nicht
 \renewcommand*{\phi}{\varphi}
 
-% Manchmal möchte man Begriffe erklären oder etwas aufzählen, das aber
+% Manchmal mÃ¶chte man Begriffe erklÃ¤ren oder etwas aufzÃ¤hlen, das aber
 % nicht fett gedruckt werden soll. Dazu diese Umdefinition einer
 % description mit normaler Schrift
 \newenvironment*{mdescription}%
@@ -203,36 +203,36 @@
 \chapter*{Vorwort}
 
 {\itshape
-  Dieses Dokument wurde als Skript für die auf der
+  Dieses Dokument wurde als Skript fÃ¼r die auf der
   Titelseite genannte Vorlesung erstellt und wird jetzt im Rahmen des
   Projekts
   "`\href{http://uni-skripte.lug-jena.de/}
-  {Vorlesungsskripte der Fakultät für Mathematik}
+  {Vorlesungsskripte der FakultÃ¤t fÃ¼r Mathematik}
   \href{http://uni-skripte.lug-jena.de/}{und Informatik}"'
   weiter betreut. Das
   Dokument wurde nach bestem Wissen und Gewissen angefertigt. Dennoch
   garantiert weder der auf der Titelseite genannte Dozent, die Personen,
   die an dem Dokument mitgewirkt haben, noch die
-  Mitglieder des Projekts für dessen Fehlerfreiheit. Für etwaige Fehler
+  Mitglieder des Projekts fÃ¼r dessen Fehlerfreiheit. FÃ¼r etwaige Fehler
   und dessen Folgen wird von keiner der genannten Personen eine Haftung
-  übernommen. Es steht jeder Person frei, dieses Dokument zu lesen, zu
-  verändern oder auf anderen Medien verfügbar zu machen, solange ein
+  Ã¼bernommen. Es steht jeder Person frei, dieses Dokument zu lesen, zu
+  verÃ¤ndern oder auf anderen Medien verfÃ¼gbar zu machen, solange ein
   Verweis auf die Internetadresse des Projekts
   \url{http://uni-skripte.lug-jena.de/}
   enthalten ist.
 
-  Diese Ausgabe trägt die Versionsnummer~\SVNLastChangedRevision{} und ist vom
-  \SVNDate{}. Eine neue Ausgabe könnte auf der Webseite des Projekts verfügbar
+  Diese Ausgabe trÃ¤gt die Versionsnummer~\SVNLastChangedRevision{} und ist vom
+  \SVNDate{}. Eine neue Ausgabe kÃ¶nnte auf der Webseite des Projekts verfÃ¼gbar
   sein.
 
   Jeder ist dazu aufgerufen, Verbesserungen, Erweiterungen und
-  Fehlerkorrekturen für das Skript einzureichen bzw. zu melden oder diese
+  Fehlerkorrekturen fÃ¼r das Skript einzureichen bzw. zu melden oder diese
   selbst einzupflegen -- einfach eine E-Mail an die
   \href{mailto:uni-skripte@lug-jena.de}{Mailingliste
   \nolinkurl{<uni-skripte@lug-jena.de>}} senden. Weitere Informationen
-  sind unter der oben genannten Internetadresse verfügbar.
+  sind unter der oben genannten Internetadresse verfÃ¼gbar.
 
-  Hiermit möchten wir allen Personen, die an diesem Skript mitgewirkt
+  Hiermit mÃ¶chten wir allen Personen, die an diesem Skript mitgewirkt
   haben, vielmals danken:
   \begin{itemize}
    \item \href{mailto:email}{Person \nolinkurl{<email>}} (Jahr)
@@ -244,11 +244,11 @@
 \tableofcontents
 
 \clearpage
-\pdfbookmark[0]{Auflistung der Sätze}{theoremlist}
+\pdfbookmark[0]{Auflistung der SÃ¤tze}{theoremlist}
 \chapter*{Auflistung der Theoreme}
 
-\pdfbookmark[1]{Sätze}{satzlist}
-\section*{Sätze}
+\pdfbookmark[1]{SÃ¤tze}{satzlist}
+\section*{SÃ¤tze}
 \theoremlisttype{optname}
 \listtheorems{satz}
 
@@ -268,7 +268,7 @@
   \end{gather*}
 
   \begin{proof}
-    Daher müssen wir ihn auch beweisen:
+    Daher mÃ¼ssen wir ihn auch beweisen:
     \begin{align*}
       a\cdot 0 &= a\cdot(1-1)\\
       &= a-a&\text{durch ausmultiplizieren}\\
@@ -278,14 +278,14 @@
 \end{satz}
 
 Die Umgebung \texttt{proof} sollte immer innerhalb der Umgebung stehen, zu der
-der Beweis gehört. Das hat den Vorteil, dass man Umgebungen ohne Beweis z.\,B.
-mit $\scriptstyle\Box$ enden lassen kann, wärend Umgebungen mit Beweisen
+der Beweis gehÃ¶rt. Das hat den Vorteil, dass man Umgebungen ohne Beweis z.\,B.
+mit $\scriptstyle\Box$ enden lassen kann, wÃ¤rend Umgebungen mit Beweisen
 mit $\scriptstyle\blacksquare$ enden. Dadurch kann man im laufenden Text
-auch das Ende von Sätzen, Bemerkungen und dergleichen erkennen, was sonst
-schwer ist, da die gleiche Schrift sowohl innerhalb als auch außerhalb
+auch das Ende von SÃ¤tzen, Bemerkungen und dergleichen erkennen, was sonst
+schwer ist, da die gleiche Schrift sowohl innerhalb als auch auÃŸerhalb
 verwendet wird.
 % Man beachte die speziellen Anweisungen bei der theorem-Definition in der
-% Präampel
+% PrÃ¤ampel
 
 \begin{bemerk}
   Der ganz tolle und wichtige \autoref{satz:1} ist gar nicht so toll und
@@ -295,40 +295,40 @@ verwendet wird.
 \begin{bemerk}[Wichtiger Hinweis]
   Aber merke: Keine \texttt{equation}-Umgebung mehr verwenden.
   % \todo am Besten immer in eine eigene Zeile schreiben, so kann man diese
-  % Löschen und der Commit berührt nicht den Text, sofern dies nicht
+  % LÃ¶schen und der Commit berÃ¼hrt nicht den Text, sofern dies nicht
   % erforderlich ist.
-  \todo{Dokument darauf prüfen}
+  \todo{Dokument darauf prÃ¼fen}
   Stattdessen lieber \texttt{gather}. Siehe \url{news:d9bfko$fdp$1@news.BelWue.DE}
   \href{ftp://cam.ctan.org/tex-archive/macros/latex/contrib/onlyamsmath/onlyamsmath.dvi}
   {Dokumentation von onlyamsmath}
   und einfach mal "`\texttt{texdoc amsldoc}"' aufrufen.
 
   Auf \url{http://www.dante.de/CTAN/info/german/l2tabu/l2tabu.pdf} sind
-  weitere nützliche Hinweise zu finden.
+  weitere nÃ¼tzliche Hinweise zu finden.
 \end{bemerk}
 
 \begin{satz}[Verwendung von Grafiken]
   Grafiken sollten prinzipell in einem Vektorformat erstellt werden. Dazu
   eignet sich \texttt{xfig} sehr gut. Wird das Bild mit
   \texttt{\textbackslash{}includegraphics\{bild\}} eingebunden, erstellt
-  \texttt{rubber} automatisch daraus die benötigte Datei
-  -- \texttt{bild.pdf} oder \texttt{bild.eps} -- für \LaTeX{}.
+  \texttt{rubber} automatisch daraus die benÃ¶tigte Datei
+  -- \texttt{bild.pdf} oder \texttt{bild.eps} -- fÃ¼r \LaTeX{}.
 
-  Für besondere Schriften (z.\,B. mathmatische Zeichen oder
-  Hoch-/Tiefstellen) kann man in \texttt{xfig} das "`Special Flag"' für
+  FÃ¼r besondere Schriften (z.\,B. mathmatische Zeichen oder
+  Hoch-/Tiefstellen) kann man in \texttt{xfig} das "`Special Flag"' fÃ¼r
   Text setzen und das Bild mit
   \texttt{\textbackslash{}input\{bild.pdf\_t\}} einbinden. Damit wird die
   Schrift direkt von \LaTeX{} erzeugt und man hat (fast) alle
-  Möglichkeiten, die \LaTeX{} bietet. \texttt{rubber} erkennt
-  selbstständig, welches Grafikformat benötigt wird und erzeugt
-  unabhängig vom Namen das Bild als PDF oder PS.
+  MÃ¶glichkeiten, die \LaTeX{} bietet. \texttt{rubber} erkennt
+  selbststÃ¤ndig, welches Grafikformat benÃ¶tigt wird und erzeugt
+  unabhÃ¤ngig vom Namen das Bild als PDF oder PS.
 \end{satz}
 
 \begin{festl}
-  Im Mathematikmodus drückt man mit einem Doppelpunkt \texttt{:} nicht
+  Im Mathematikmodus drÃ¼ckt man mit einem Doppelpunkt \texttt{:} nicht
   unbedingt das aus, was man will. Der Doppelpunk ist der
   Divisionsoperator, wie er z.\,B. in "`$1:2 = 0,5$"'%
-  \footnote{Da im Englischen das Komma der Trenner für die
+  \footnote{Da im Englischen das Komma der Trenner fÃ¼r die
     Tausenderstelle ist, muss man das Paket \textsf{isonums} verwenden,
     sonst stimmt der Abstand nicht: $\ZifferAus 0,5\ZifferAn$ (ohne) statt
     $0,5$ (mit). Siehe auch
@@ -336,7 +336,7 @@ verwendet wird.
     {Mathmode von Herbert Voss}\cite{mathmode} Abschnitt
     "`11.4 Dot versus comma"'}
   verwendet wird. Wenn man jedoch $f\colon \R\rightarrow\R$ oder
-  $\{a\colon a\in\N\cap\Q\}$ ausdrücken will, muss man \verb+\colon+
+  $\{a\colon a\in\N\cap\Q\}$ ausdrÃ¼cken will, muss man \verb+\colon+
   verwenden.
 
   Der Unterschied zeigt sich u.\,a. im linken und rechten Abstand
