--- a/hecker-info3/skript.tex
+++ b/hecker-info3/skript.tex
@@ -1,5 +1,6 @@
 %% TODO:
 %%       - Befehl für Algorithmen anlegen
+%%       - Das Wort Rang steht im Mathesatz
 
 \RequirePackage[l2tabu,orthodox]{nag}  % nag überprüft den Text auf veraltete
                    % Befehle oder solche, die man nicht in LaTeX verwenden
@@ -711,7 +712,7 @@ Dazu wird zunächst das Verfahren \textsc{MergeSort} vorgestellt und anhand eine
 %Sebastian Oerding
 \subsection{Ein Beispiel für \textsc{MergeSort}}
 
-\centering
+\begin{center}
 1 7 8 3 4 6 5 9
 \medskip
 
@@ -729,13 +730,16 @@ $\underbrace{1 \hspace{15pt} 7 \hspace{15pt} 8 \hspace{15pt} 3 \hspace{15pt} 4 \
 \medskip
 
 1 3 7 8 \hspace{10pt} 4 5 6 9
-\medskip
+\medskip  
 
 $\underbrace{1 \hspace{5pt} 3 \hspace{5pt} 4 \hspace{5pt} 5 \hspace{5pt} 6 \hspace{5pt} 7 \hspace{5pt} 8 \hspace{5pt}
 9}_{\textrm{\textup{Sukzessives Zusammenmischen der sortierten Teilfolgen}}}$
+\end{center}
+\todo{MergeSort besser darstellen, center-Umgebung ist der falsche Weg}
 
 
-Das Mischen funktioniert in $\OO(n)$~Zeit, zur Verdeutlichung wird es nochmal exemplarisch skizziert, dazu werden zwei Folgen mit m
+Das Mischen funktioniert in $\OO(n)$~Zeit, zur Verdeutlichung wird es
+nochmal exemplarisch skizziert, dazu werden zwei Folgen mit m
 Elementen zusammengemischt.
 
 $\left. 
@@ -749,21 +753,24 @@ $\left.
 
 Die beiden Folgen werden also zu einer in sich sortierten Folge der doppelten Länge gemischt. Wie im folgenden zu sehen, werden immer genau
 zwei Elemente miteinander verglichen. Der Fall, daß zwei Teilfolgen unterschiedliche Länge haben, kann o.\,B.\,d.\,A. ignoriert werden.
-\bigskip
-
-b$_1<$a$_1 \leadsto \begin{array}{l}
-\downarrow\\
-{\textrm{\textup{b}}}_1
-\end{array} \leadsto$
-b$_2<$a$_1 \leadsto \begin{array}{l}
-\downarrow\\
-{\textrm{\textup{b}}}_2
-\end{array} \leadsto$
-a$_1<$b$_3 \leadsto \begin{array}{l}
-\downarrow\\
-{\textrm{\textup{a}}}_1
-\end{array} \leadsto \ldots \leadsto {\textrm{\textup{b}}}_1, {\textrm{\textup{b}}}_2, {\textrm{\textup{a}}}_1, \ldots$
-\bigskip
+\begin{align*}
+  b_1<a_1 \leadsto
+  \begin{array}{l}
+    \downarrow\\
+    b_1
+  \end{array}
+  \leadsto b_2<a_1 \leadsto
+  \begin{array}{l}
+    \downarrow\\
+    b_2
+  \end{array}
+  \leadsto a_1<b_3 \leadsto
+  \begin{array}{l}
+    \downarrow\\
+    a_1
+  \end{array}
+  \leadsto \ldots \leadsto b_1, b_2, a_1, \ldots
+\end{align*}
 
 An konkreten Zahlen läßt sich das vielleicht noch besser verfolgen, das Mischen im letzten Schritt aus dem Beispiel sähe wie folgt aus.
 \bigskip
@@ -857,11 +864,13 @@ Anmerkung: Floors und ceilings werden jetzt und meist in Zukunft weggelassen - d
 $ \input{221003a.latex} $
 
 \begin{definition}
-	  Ein Binärbaum ist eine Menge von drei Mengen von Knoten. Zwei davon sind wieder Binärbaume sind und heissen linker bzw.
-	  rechter Teilbaum, die dritte Menge ist die Einermenge \{ROOT\}. Andernfalls ist die Menge leer.
+  Ein Binärbaum ist eine Menge von drei Mengen von Knoten. Zwei davon
+  sind wieder Binärbaume sind und heissen linker bzw.  rechter
+  Teilbaum, die dritte Menge ist die Einermenge \{ROOT\}. Andernfalls
+  ist die Menge leer.
 	  
-	  Bei einem Baum, der nur aus der Wurzel besteht, sind also die Mengen linker Teilbaum und rechter Teilbaum jeweils die leere
-	  Menge.
+  Bei einem Baum, der nur aus der Wurzel besteht, sind also die Mengen
+  linker Teilbaum und rechter Teilbaum jeweils die leere Menge.
 \end{definition}
 
 $ \input{221003b.latex} $
